--- a/app/views/role/descriptors/show.html.erb
+++ b/app/views/role/descriptors/show.html.erb
@@ -1,6 +1,6 @@
+<%
 =begin
-
-Copyright (c) 2022, all rights reserved.
+Copyright (c) 2023, all rights reserved.
 
 All the information provided by this platform is protected by international laws related  to 
 industrial property, intellectual property, copyright and relative international laws. 
@@ -14,16 +14,7 @@ For more information read the license file including with this software.
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
-=end
 
-class CreateRoleDescribers < ActiveRecord::Migration[7.0]
-    def change
-        create_table :role_describers do |t|
-            t.timestamps
-            t.datetime :deleted_at, index: true
-        end
-        add_reference :role_describers, :roles, foreign_key: true
-        add_reference :role_describers, :descriptors, foreign_key: true
-        add_reference :role_describers, :user, foreign_key: true
-    end
-end
+=end
+%>
+<router-view></router-view>
