--- a/lib/assets/scss/templates/dashboards.scss
+++ b/lib/assets/scss/templates/dashboards.scss
@@ -31,7 +31,7 @@ main {
         // widget card
         .card {
             border-radius: .8rem;
-            box-shadow: 0px 4px 8px rgba(176, 190, 197, 0.24);
+            box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
         }
 
         // widgets with tables
