--- a/lib/assets/scss/lesli3/layout/application-engines.scss
+++ b/lib/assets/scss/lesli3/layout/application-engines.scss
@@ -43,12 +43,13 @@ For more information read the license file including with this software.
             text-align: left;
             align-items: center;
             padding: 1rem .4rem;
-            border-radius: 12px;
             margin-bottom: 1rem;
+            border-radius: .8rem;
             border: 2px solid transparent;
             background-color: lesli-css-color(silver, 100);
             box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
             transition: all ease-in-out .4s;
+            box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
             &:hover {
                 background-color: #F0F4FF;
             }
