--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -25,11 +25,12 @@ div.information {
         justify-content: center;
         border-radius: 50%;
         background-color: lesli-css-color(silver, 100);
-        border: 1px solid lesli-css-color(blue, 100);
+        border: 2px solid var(--lesli-color-primary, lesli-css-color(blue));
     }
     .alternative-avatar {
-        font-weight: 100;
+        font-weight: 200;
         font-size: 3rem;
+        color: var(--lesli-color-primary, lesli-css-color(blue));
     }
 }
 
