--- a/app/views/layouts/components/_sidebar-administration.html.erb
+++ b/app/views/layouts/components/_sidebar-administration.html.erb
@@ -22,6 +22,7 @@ For more information read the license file including with this software.
 
 <%= navigation_lesli_item(main_app.descriptors_path, "Role descriptors", "ri-shield-check-line"); %>
 <%= navigation_lesli_item(main_app.roles_path, I18n.t("core.shared.sidebar_nav_roles_privileges"), "ri-shield-user-line"); %>
+<%= navigation_lesli_item(main_app.account_issues_path, "Account issues", "ri-focus-line"); %>
 
 <%= navigation_lesli_item(main_app.security_account_settings_path, I18n.t("core.account/settings.view_tab_title_security_settings"), "ri-lock-line"); %>
 <%#= navigation_lesli_item(main_app.account_currencies_path, I18n.t("core.shared.sidebar_nav_currencies"), "ri-time-line"); %>
