--- a/lib/assets/scss/templates/dashboards.scss
+++ b/lib/assets/scss/templates/dashboards.scss
@@ -25,8 +25,8 @@ For more information read the license file including with this software.
 @import "./lesli3/settings/variables";
 
 
-// column container for widgets
-.application-component .column {
+// · main container for dashboard widgets
+.dashboard-components .column {
     margin-bottom: .6rem;
 
     div.component-chart {
