--- a/lib/assets/scss/lesli3/components/stepper.scss
+++ b/lib/assets/scss/lesli3/components/stepper.scss
@@ -38,9 +38,9 @@ For more information read the license file including with this software.
       }
       
       .step-line {
-        border: 1px solid black;
+        border: 1px solid #ccc;
         flex: 0 0 auto;
-        width: 50px;
+        width: 100px;
         height: 0;
         margin: 0 10px;
         position: relative;
